// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/settings/repositoryLocationList matches snapshot with each type item 1`] = `
<div
  className="location-list"
>
  <t
    behaviour="move"
    onDrop={[Function]}
    orientation="vertical"
  >
    <n
      key="PUBLIC"
    >
      <RepositoryLocationListItem
        index={0}
        item={
          Object {
            "repositoryLocationType": "PUBLIC",
          }
        }
        moveCard={[MockFunction]}
        onPrivateRepositoryConnectionStringChanged={[MockFunction]}
        onRemoveListItem={[MockFunction]}
      />
    </n>
    <n
      key="DEVICE"
    >
      <RepositoryLocationListItem
        index={1}
        item={
          Object {
            "repositoryLocationType": "DEVICE",
          }
        }
        moveCard={[MockFunction]}
        onPrivateRepositoryConnectionStringChanged={[MockFunction]}
        onRemoveListItem={[MockFunction]}
      />
    </n>
    <n
      key="PRIVATE"
    >
      <RepositoryLocationListItem
        index={2}
        item={
          Object {
            "repositoryLocationType": "PRIVATE",
          }
        }
        moveCard={[MockFunction]}
        onPrivateRepositoryConnectionStringChanged={[MockFunction]}
        onRemoveListItem={[MockFunction]}
      />
    </n>
  </t>
  <CustomizedActionButton
    disabled={true}
    iconProps={
      Object {
        "iconName": "Add",
      }
    }
    menuProps={
      Object {
        "items": Array [
          Object {
            "disabled": true,
            "key": "PRIVATE",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.private.label",
          },
          Object {
            "disabled": true,
            "key": "PUBLIC",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.public.label",
          },
          Object {
            "disabled": true,
            "key": "DEVICE",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.device.label",
          },
        ],
      }
    }
    text="settings.modelDefinitions.add"
  />
</div>
`;

exports[`components/settings/repositoryLocationList matches snapshot with no items 1`] = `
<div
  className="location-list"
>
  <t
    behaviour="move"
    onDrop={[Function]}
    orientation="vertical"
  />
  <CustomizedActionButton
    disabled={true}
    iconProps={
      Object {
        "iconName": "Add",
      }
    }
    menuProps={
      Object {
        "items": Array [
          Object {
            "disabled": true,
            "key": "PRIVATE",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.private.label",
          },
          Object {
            "disabled": true,
            "key": "PUBLIC",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.public.label",
          },
          Object {
            "disabled": true,
            "key": "DEVICE",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.device.label",
          },
        ],
      }
    }
    text="settings.modelDefinitions.add"
  />
</div>
`;

exports[`components/settings/repositoryLocationList matches snapshot with public item 1`] = `
<div
  className="location-list"
>
  <t
    behaviour="move"
    onDrop={[Function]}
    orientation="vertical"
  >
    <n
      key="PUBLIC"
    >
      <RepositoryLocationListItem
        index={0}
        item={
          Object {
            "repositoryLocationType": "PUBLIC",
          }
        }
        moveCard={[MockFunction]}
        onPrivateRepositoryConnectionStringChanged={[MockFunction]}
        onRemoveListItem={[MockFunction]}
      />
    </n>
  </t>
  <CustomizedActionButton
    disabled={false}
    iconProps={
      Object {
        "iconName": "Add",
      }
    }
    menuProps={
      Object {
        "items": Array [
          Object {
            "disabled": false,
            "key": "PRIVATE",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.private.label",
          },
          Object {
            "disabled": true,
            "key": "PUBLIC",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.public.label",
          },
          Object {
            "disabled": false,
            "key": "DEVICE",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.device.label",
          },
        ],
      }
    }
    text="settings.modelDefinitions.add"
  />
</div>
`;
